--- a/2025/low-level-first/images/layering.css
+++ b/2025/low-level-first/images/layering.css
@@ -14,22 +14,20 @@
 }
 
 #hlf {
-	--path-mvp: path("M 79 540 C 93 516 127 482 144 468 C 162 454 178 446 187 441 M 78 534 C 102 509 125 485 142 471 C 160 457 178 444 185 438");
+	--path-mvp: path("M 79 540 C 93 516 127 482 144 468 C 162 454 178 446 187 441   M 78 534 C 102 509 125 485 142 471 C 160 457 178 444 185 438");
 	--path-v1:  path("M 79 540 C 126 500 276 382 352 327 C 427 273 502 230 533 210  M 80 540  C 122 508 273 387 348 331 C 423 275 497 226 528 206");
 	--path-v2:  path("M 79 540 C 142 490 337 337 467 248 C 597 160 793 49  858 9    M 80 540  C 148 487 338 330 467 243 C 596 156 792 52 857 12");
 }
 
 #llf {
-	--path-mvp: path("M 828 20 C 706 20, 218 21, 96 20 M 824 17 C 702 16, 215 15, 93 16");
-	--path-v1: path("M 99 252 C 146 242, 291 234, 367 199 C 443 163, 482 71, 558 41 C 633 12, 777 23, 821 20 M 97 257 C 141 249, 287 239, 363 202 C 439 165, 477 67, 553 36 C 629 6, 775 23, 819 25");
-	--path-v2: path("M 81 536 C 123 490, 256 348, 334 266 C 413 185, 470 84, 551 44 C 632 3, 778 29, 822 25 M 79 540 C 120 496, 254 354, 332 270 C 411 186, 467 81, 549 39 C 631 -2, 777 24, 823 21");
+	--path-mvp: path("M96 20  C 186 20 286 20 367 20 C 427 20 492 20 558 20 C 650 20 739 20 828 20 M 93 16 C 183 16 273 16 363 16 C443 16 498 16 553 16 C629 16 727 17 824 17");
+	--path-v1:  path("M99 252 C 146 242 291 234 367 199 C 443 163 482 71 558 41 C633 12 777 23 821 20 M 97 257 C 141 249 287 239 363 202 C439 165 477 67 553 36 C629 6 775 23 819 25");
+	--path-v2:  path("M81 536 C 123 490 256 348 334 266 C 413 185 470 84 551 44 C632 3 778 29 822 25 M 79 540 C 120 496 254 354 332 270 C411 186 467 81 549 39 C631 -2 777 24 823 21");
 }
 
 #grid {
 	color: var(--color-text);
 }
-
-
 
 @keyframes curve {
 	from, 25% {
@@ -44,6 +42,24 @@
 		d: var(--path-v2);
 		color: var(--color-v2);
 	}
+}
+
+@property --version-mvp {
+	syntax: "<number>";
+	initial-value: 0;
+	inherits: true;
+}
+
+@property --version-v1 {
+	syntax: "<number>";
+	initial-value: 0;
+	inherits: true;
+}
+
+@property --version-v2 {
+	syntax: "<number>";
+	initial-value: 0;
+	inherits: true;
 }
 
 @keyframes version {
@@ -80,10 +96,6 @@
 .version {
 	animation: inherit;
 	animation-name: version;
-	transition: opacity 0.5s;
-	--version-mvp: 0;
-	--version-v1: 0;
-	--version-v2: 0;
 
 	&.mvp {
 		opacity: var(--version-mvp);
