Address feedback: Add canonical link to HTML

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -16,6 +16,7 @@
 
 	<link rel="shortcut icon" href="{{ page | relative }}/mark.svg" />
 	<link rel="dns-prefetch" href="https://kit.fontawesome.com">
+	<link rel="canonical" href="{{ page.url | absolutize }}" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Lea Verou">
 	{% if draft or unlisted %}<meta name="robots" content="noindex">{% endif %}
