--- a/blog/2025/simple-easy-complex-possible/images/curve-delightful.css
+++ b/blog/2025/simple-easy-complex-possible/images/curve-delightful.css
@@ -1,5 +1,14 @@
 @import "base.css";
 
+:root {
+	--path-bad: path("M 97 511 c 17 -69 59 -301 65 -450 C 320 48 580.73 39.74 831 24 M 94 516 c 13 -73 65 -323 70 -458 C 483 46 734.66 33.63 833 22");
+	--path-ok: path("M 97, 511 c 42.57,-66.68,136.28,-317.33,254.84,-398.41 C 489.39 31.51 751.57 39.74 827.34 24.52 M 94 516 c 42.09,-67.54,136.33,-325.26,255.14,-408.02 C 487.51 25.4 750.22 33.82 826.42 19.58");
+	--path-good: path("M 100, 511 c 56.79,-45.61,222.79,-190.51,341.06,-271.56 C 559.34 158.39 748.49 60.57 818 24 M 97 509 c 56.5,-45.41,224.65,-184.7,343.03,-265.98 C 558.41 161.74 746.08 58.46 828 24");
+	--path-amazing: path("M 100, 511 c 82.49,-25.45,380.37,-70.81,498.92,-152.38 C 717.47 277.06 775.85 77.96 818.92 21.61 M 111 509 c 82.15,-25.3,375.01,-66.04,493.81,-148.12 C 723.6 278.8 788.28 72.84 829.81 20.88");
+
+	--animation-duration: 4s;
+}
+
 @keyframes toggle {
 	2%, 15% {
 		opacity: 1;
@@ -9,80 +18,110 @@
 	}
 }
 
-path {
-	stroke-linecap: round;
-}
-
-:root {
-	--color-bad: var(--color-red-dark);
-	--color-ok: var(--color-orange-dark);
-	--color-good: var(--color-lime-dark);
-	--color-amazing: var(--color-green-dark);
-}
-
 @keyframes curve {
-	0%, 20%, to { /* good */
-		stroke: var(--color-good);
-		d: path("M 116, 511 c 56.79,-45.61,222.79,-190.51,341.06,-271.56 c 118.28,-81.05,307.43,-178.87,368.59,-214.73m-712.56,483.47 c 56.5,-45.41,224.65,-184.7,343.03,-265.98 c 118.38,-81.28,306.05,-184.56,367.23,-221.71");
+	0%, 14%, to {
+		d: var(--path-bad);
 	}
 
-	33.333%, 53.333% { /* ok */
-		stroke: var(--color-ok);
-		d: path("M 116, 511 c 42.57,-66.68,136.28,-317.33,254.84,-398.41 c 118.55,-81.08,380.73,-72.85,456.5,-88.07m-713.78,491.67 c 42.09,-67.54,136.33,-325.26,255.14,-408.02 c 118.81,-82.77,381.52,-74.35,457.72,-88.59");
+	25%, 39% {
+		d: var(--path-ok);
 	}
 
-	66.6666%, 86.6666% { /* amazing */
-		stroke: var(--color-amazing);
-		d: path("M 116, 511 c 82.49,-25.45,380.37,-70.81,498.92,-152.38 c 118.55,-81.56,176.93,-280.66,212.35,-337.01m-707.21,487.5 c 82.15,-25.3,375.01,-66.04,493.81,-148.12 c 118.79,-82.08,183.47,-288.04,218.96,-344.35");
+	50%, 64% {
+		d: var(--path-good);
+	}
+
+	75%, 89% {
+		d: var(--path-amazing);
 	}
 }
 
-@keyframes point {
-	0%, 20%, to { /* good */
-		fill: var(--color-good);
+@keyframes color {
+	0%, 14%, to {
+		color: var(--color-bad);
 	}
 
-	33.333%, 53.333% { /* ok */
-		fill: var(--color-ok);
+	25%, 39% {
+		color: var(--color-ok);
 	}
 
-	66.6666%, 86.6666% { /* amazing */
-		fill: var(--color-amazing);
+	50%, 64% {
+		color: var(--color-good);
+	}
+
+	75%, 89% {
+		color: var(--color-amazing);
 	}
 }
 
 .curve,
 .point,
 .curve-label {
-	animation: 4s infinite;
+	animation: color var(--animation-duration) infinite;
+	animation-delay: calc(-1 * var(--animation-frame) * var(--animation-duration));
+	animation-play-state: var(--animation-play-state);
 
 	&:is(#paused:target ~ *, #paused:target ~ * *) {
 		animation-play-state: paused;
 	}
 }
 
+:root:has(#paused:target, #bad:target, #ok:target, #good:target, #amazing:target) {
+	--animation-play-state: paused;
+}
+
+:root:has(#bad:target) {
+	--animation-frame: .1;
+}
+
+:root:has(#ok:target) {
+	--animation-frame: .3;
+}
+
+:root:has(#good:target) {
+	--animation-frame: .6;
+}
+
+:root:has(#amazing:target) {
+	--animation-frame: .8;
+}
+
+
 .curve {
 	fill: none;
-	stroke: var(--color-good);
+	animation-name: curve, color;
 	stroke-width: 2px;
-	animation-name: curve;
+	stroke: currentColor;
+	fill: none;
 }
 
 .point {
-	fill: var(--color-good);
-	animation-name: point;
+	fill: currentColor;
 }
 
 .curve-label {
 	animation-name: toggle;
+	animation-delay: calc(var(--animation-duration) * (.25 * var(--index)));
+
+	&.bad, &.ok, &.good, &.amazing {
+		opacity: 0;
+	}
+
+	&.bad {
+		--index: 0;
+	}
+
+	&.ok {
+		--index: 1;
+	}
+
+	&.good {
+		--index: 2;
+	}
+
+	&.amazing {
+		--index: 3;
+	}
 }
 
-.ok {
-	animation-delay: 1.333s;
-	opacity: 0;
-}
 
-.amazing {
-	animation-delay: 2.666s;
-	opacity: 0;
-}
