Split consulting across 3 pages

--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@ title: Home
 {% markdown %}
 **Hi, I’m Lea!** 👋🏼
 I make things for making things.
-I’m an [award-winning](https://openjsf.org/blog/javascriptlandia-awards-2025#:~:text=Lea%20Verou) web standards leader,
+I’m an [award-winning web standards leader](https://openjsf.org/blog/javascriptlandia-awards-2025#:~:text=Lea%20Verou),
 and have designed [several web technologies](/specs/) implemented in your browser.
 I have launched [open source dev tools](/projects/) used by millions,
 and [consult](/consulting/) on my areas of expertise.
